<resources>
    <string name="app_name">My First App</string>
    <string name="Enter_ID">Enter Employee Id</string>
    <string name="Name_Id">Name</string>
    <string name="Enter_Access_Code">Enter Access Code</string>
    <string name="Enter_Confirm_Code">Enter Confirm Code</string>
    <string name="submit">submit</string>
    <string name="reset">reset</string>
    <string name="choice">Allowed Access?</string>
    <string name="femaleGender">Female</string>
    <string name="maleGender">Male</string>
    <string name="Enter_Email">Enter Your Email</string>

    <string-array name= "EmpId">
        <item>444</item>
        <item>555</item>
        <item>333</item>
        <item>888</item>
    </string-array>

    <string-array name="department_choices">
        <item>Computer Science</item>
        <item>English</item>
        <item>Music</item>
        <item>Film</item>
    </string-array>
</resources>