<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Employee_ID_View"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Employee ID"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Employee_ID_value"
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:hint="@string/Enter_ID" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Name_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Name_value"
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:hint="@string/Name_Id" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Gender_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Gender"
            android:textSize="24sp" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
               android:id="@+id/radio_female"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="onRadioButtonClicked"
               android:text="@string/maleGender" />
            <RadioButton
               android:id="@+id/radio_male"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="onRadioButtonClicked"
               android:text="@string/femaleGender" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Access_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Access Code"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Access_code_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/Enter_Access_Code"
            android:inputType="numberPassword"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Confirm_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Confirm Code"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Confirm_code_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/Enter_Confirm_Code"
            android:inputType="numberPassword"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Department_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="Department"
            android:textSize="24sp" />
        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/AD_view"
        android:layout_width="376dp"
        android:layout_height="70dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:text="A/D"
            android:textSize="24sp" />
        <CheckBox android:id="@+id/checkbox_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_view"
        android:layout_width="208dp"
        android:layout_height="70dp"
        android:layout_marginLeft="175dp">


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="resetFrom"
            android:text="@string/reset" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>